# upload-video

./: .gitignore  GEMINI.md  README.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  alembic.ini.example  docker-compose.yml  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: auth.py  categories.py  tags.py  users.py  videos.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  security.py
backend/app/models/: __init__.py  category.py  tag.py  user.py  video.py  video_category_association.py  video_tag_association.py
backend/app/schemas/: __init__.py  category.py  tag.py  user.py  video.py  video_status.py
backend/app/services/: __init__.py
backend/app/tasks/: video_processing.py
backend/migrations/: env.py
backend/migrations/versions/: 1a28d7e82411_add_status_to_video_model.py  6268b846e712_add_video_model.py  64f2e88dae6d_init.py  73803f37deb6_add_tags_and_categories.py  75ee4abf7810_add_user_model.py  8d629638ace7_add_hls_url_to_video_model.py  d563210adaf0_add_avatar_url_to_user_model.py  f1ba41ab0106_add_owner_to_video_model.py
backend/tests/: __init__.py  conftest.py  test.db  test_auth.py  test_videos.py
frontend/: .eslintrc.cjs  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/components/: Layout.svelte
