[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable common Python rules
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "A",  # flake8-builtins
    "D",  # pydocstyle
    "S",  # flake8-bandit (security)
    "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "E501",  # Line too long (handled by formatter)
]

# Set the maximum line length to 88 (Black's default)
line-length = 88

# Exclude files and directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
    "node_modules",
]

# Target Python version
target-version = "py312"

# Formatting configuration
[tool.ruff.format]
# Use spaces for indentation
indent-style = "space"
# Number of spaces per indentation level
indent-width = 4
# Use double quotes for strings
quote-style = "double"
# Add a trailing comma after the last item in a collection
skip-magic-trailing-comma = false
# Wrap expressions in parentheses when they're split across multiple lines
line-ending = "auto"

# Per-file-ignores
[tool.ruff.per-file-ignores]
# Ignore missing docstrings in tests and migrations
"tests/*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]
"migrations/*.py" = ["D", "E501"]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[project]
name = "videoflow-backend"
version = "0.1.0"
description = "Backend for Video Upload and Playback Service"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.23.2",
    "python-multipart>=0.0.6",
    "boto3>=1.28.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.16.2",
    "sqlalchemy>=2.0.41",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
